--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -9,7 +9,55 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
-    <h1>Concurrentie analyse</h1>
-    
+    <div id="contain1">
+        <h1>Concurrentie analyse</h1>
+        <h2>Websites</h2>
+        <figure>
+            <img src="images/edsheeran.jpg">
+            <img src="images/imaginedragons.png">
+            <img src="images/muse.jpg">
+        </figure>
+        <h2>+ Positieve zaken +</h2>
+        <h3>Ed Sheeran (1)</h3>
+        <ul>
+            <li>In de footer, links naar sociale media en naar musicplayers.</li>
+            <li>Op de home pagina, een deel met laatste nieuws.</li>
+            <li>Optie om in te loggen, zodat je dingen kan winnen</li>
+            <li>Overzichtelijk design, heel strak en in dezelfde stijl als de artiest.</li>
+        </ul>
+        <h3>Imagine Dragons (2)</h3>
+        <ul>
+            <li>Opties om foto's te liken op de site zelf.</li>
+            <li>Er komt een hover over de foto's</li>
+            <li>Pagina begint met een introductie van de band.</li>
+        </ul>
+        <h3>Muse (3)</h3>
+        <ul>
+            <li>De eerste pagina is een futuristisch design waarop je hun nieuwste liedje kan beluisteren en bekijken.</li>
+            <li>Internationaal bekend, dus de website is in verschillende talen.</li>
+            <li>Aan de zijkant een balk met toekomstige optredens. Waar, wanneer en hoe te bestellen.</li>
+            <li>De achtergrondafbeelding komt heel sterk en krachtig uit. Hierin komt het genre duidelijk naar boven.</li>
+        </ul>
+        <h2>- Negatieve zaken -</h2>
+        <h3>Ed Sheeran (1)</h3>
+        <ul>
+            <li>Er is een balk in het midden die kan doen verwarren en denken dat je al onderaan zit.</li>
+            <li>Het ontwerp is naar mijn mening iets te simpel en mist dat stukje om een fan nog geïnteresseerder te krijgen.</li>
+            <li>De corpsen probeerden ze hetzelfde te doen als het logo, waardoor dit een slechte combinatie van corpsen geeft. </li>
+            <li>Op een laatste pagina is de uitlijning gecentreerd. Iets dat niet past als je kolommen gebruikt.</li>
+        </ul>
+        <h3>Imagine Dragons (2)</h3>
+        <ul>
+            <li>De tekst op de home pagina loopt te veel uit en verveeld dus de lezer.</li>
+            <li>Een kleine technische fout. De navigatie stond niet gecentreerd.</li>
+            <li>Sommige kleuren combinaties werken niet.</li>
+        </ul>
+        <h3>Muse (3)</h3>
+        <ul>
+            <li>De pagina lijkt meer op een website van de krant.</li>
+            <li>Door de transparantie van het vlak komt dit niet ordelijk uit met de achtergrond foto.</li>
+            <li>De video's konden beter uitgezet worden.</li>
+        </ul>
+    </div>
 </body>
 </html>
