--- a/pages/intro.html
+++ b/pages/intro.html
@@ -9,25 +9,27 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
-    <h1>New Media Design I</h1>
-    <h2>Fourty Chameleons</h2>
+    <h1 class="nmd">New Media Design I</h1>
+    <div id="contain1">
+        <h2>Fourty Chameleons</h2>
 
-    <dl class="info">
-        <dt>Naam</dt>
-        <dd>Margot Roegiers</dd>
-        <dt>Studentnummer</dt>
-        <dd>101900</dd>
-        <dt>Klasgroep</dt>
-        <dd>1MMPAb</dd>
-    </dl>
-    <p>
-        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
-    </p>
-    
-    <h1>Introductie</h1>
-    <p>Jongvolwassenen zijn de generatie die muziek leert kennen via de radio. Heel velen hebben tegen dan al een eigen genre ontwikkeld die ze het liefst hebben. Anderen appreciëren alle soorten muziek. Als mensen van 18 - 24 jaar op zoek zijn naar een website over een muziekband, dan is dit vaak om meer over deze band te weten te komen. Maar ook om de interesse nog meer te prikkelen door een overzichtelijk design. Als we niet werken met een overzichtelijk design, dan werkt het beter door gebruik te maken van een iets nostalgisch en dynamisch ontwerp. Ik zelf ga voor een overzichtelijk maar nostalgisch ontwerp.</p>
-    <p>Het genre van mijn muziekband is poprock. DIt is een algemeen genre dat door deze generatie wordt geluisterd. Door het woordje pop voelen ze zich nog tot de jongere groep en door het woordje rock willen ze wel benadrukken dat ze wel al volwassen zijn. Als volwassenen een site van een muziekband opzoeken, dan lijkt mij dit voor extra informatie over de band te weten, tour data te weten, update over de nieuwste muziek, etc … . Ik ga dus een home pagina hebben met een biografie over de band. Volgend met een pagina van alle albums. Als ook een pagina met tour data en eventueel een mogelijkheid tot bestellen van tickets voor de tour.</p>
-        Als laatste is een bandnaam ook heel belangrijk. Omdat de doelgroep een jongere leeftijd is komt het vaker beter over door een naam te nemen waarover kan nagedacht worden. Eventueel zit er een betekenis achter, maar dat hoeft niet per se. Mijn muziek band zal “Fourty Chameleons” heten.</p>
+        <dl class="info">
+            <dt>Naam</dt>
+            <dd>Margot Roegiers</dd>
+            <dt>Studentnummer</dt>
+            <dd>101900</dd>
+            <dt>Klasgroep</dt>
+            <dd>1MMPAb</dd>
+        </dl>
+        <p>
+            <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
         </p>
+    
+        <h1>Introductie</h1>
+        <p>Jongvolwassenen zijn de generatie die muziek leert kennen via de radio. Heel velen hebben tegen dan al een eigen genre ontwikkeld die ze het liefst hebben. Anderen appreciëren alle soorten muziek. Als mensen van 18 - 24 jaar op zoek zijn naar een website over een muziekband, dan is dit vaak om meer over deze band te weten te komen. Maar ook om de interesse nog meer te prikkelen door een overzichtelijk design. Als we niet werken met een overzichtelijk design, dan werkt het beter door gebruik te maken van een iets nostalgisch en dynamisch ontwerp. Ik zelf ga voor een overzichtelijk maar nostalgisch ontwerp.</p>
+        <p>Het genre van mijn muziekband is poprock. DIt is een algemeen genre dat door deze generatie wordt geluisterd. Door het woordje pop voelen ze zich nog tot de jongere groep en door het woordje rock willen ze wel benadrukken dat ze wel al volwassen zijn. Als volwassenen een site van een muziekband opzoeken, dan lijkt mij dit voor extra informatie over de band te weten, tour data te weten, update over de nieuwste muziek, etc … . Ik ga dus een home pagina hebben met een biografie over de band. Volgend met een pagina van alle albums. Als ook een pagina met tour data en eventueel een mogelijkheid tot bestellen van tickets voor de tour.</p>
+        <p> Als laatste is een bandnaam ook heel belangrijk. Omdat de doelgroep een jongere leeftijd is komt het vaker beter over door een naam te nemen waarover kan nagedacht worden. Eventueel zit er een betekenis achter, maar dat hoeft niet per se. Mijn muziek band zal “Fourty Chameleons” heten.</p>
+        </p>
+    </div>
 </body>
 </html>
