--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
-    <h1>Scenario's</h1>
+    <div id="contain1">
+        <h1>Scenario's</h1>
+        <h3>Kilian, 20 jaar</h3>
+        <p>Kilian is net begonnen met werken. Hij is een enorme fan van 'Fourty Chameleons' en zou graag naar hun concert gaan. Op de site komt hij om te kijken op welke data er concerten zijn. Zo weet hij hoeveel hij nog moet sparen.</p>
+        <h3>Tanja, 24 jaar</h3>
+        <p>Tanja hoorde net een heel goed liedje op de radio. Ze had dit direct opgezocht. Ze wou van de artiesten veel meer liedjes leren kennen dan enkel deze. Op de site kon ze terecht om al hun albums te zien en met een link erbij om het af te spelen via spotify.</p>
+        <h3>Toon, 18 jaar</h3>
+        <p>Toon ging recent naar een concert van zijn favoriete band 'Fourty Chameleons'. Op het concert zelf besprak hij met een vriend hoe de drummer heet, en hoe oud de zanger is, etcetera. Het was een eindeloze discussie. Toon is dus verstandig en neemt er de site bij waar er een uitgebreidde biografie van de artiesten staat.</p>
+        <h3>Lotte, 21 jaar</h3>
+        <p>Lotte wilt voor haar zus haar verjaardag een T-shirt van 'Fourty Chameleons' kopen. Haar zus is hier een hele grote fan van. Ze was ook teleurgesteld want ze had het op een andere site gekocht en kreeg iets wat er totaal niet op leek. Maar op de site van de artiesten zelf zal ze zeker de enige originele T-shirts vinden. En natuurlijk ook van goed kwaliteit.</p>
+    </div>
 </body>
 </html>
