--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
-    <h1>Digital Styleguide</h1>
+    <div id="contain1">
+        <h1>Digital Styleguide</h1>
+    </div>
 </body>
 </html>
