--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <a href="pages/visual-designs.pdf" target="content" class="link">Visual Designs</a>
         <h3>Develop</h3>
         <a href="pages/styleguide.html" target="content" class="link">Digital Styleguide</a>
+        <style>
+@import url('https://fonts.googleapis.com/css?family=Righteous');
+</style>
     </nav>
 
     <section>
