--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -7,6 +7,9 @@
     <title>Digital Styleguide - Eindopdracht NMD-I</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
+    <style>
+@import url('https://fonts.googleapis.com/css?family=Righteous');
+</style>
 </head>
 <body>
     <div id="contain1">
