--- a/pages/intro.html
+++ b/pages/intro.html
@@ -7,9 +7,8 @@
     <title>Introductie - Eindopdracht NMD-I</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
-    <style>
-@import url('https://fonts.googleapis.com/css?family=Righteous');
-</style>
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+
 </head>
 <body>
     <h1 class="nmd">New Media Design I</h1>
