--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <a href="pages/visual-designs.pdf" target="content" class="link">Visual Designs</a>
         <h3>Develop</h3>
         <a href="pages/styleguide.html" target="content" class="link">Digital Styleguide</a>
-        <style>
-@import url('https://fonts.googleapis.com/css?family=Righteous');
-</style>
+        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+
     </nav>
 
     <section>
