--- a/pages/intro.html
+++ b/pages/intro.html
@@ -25,6 +25,7 @@
         </dl>
         <p>
             <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
+            <a href="https://xd.adobe.com/view/f4d6262b-bde9-48b1-7c6c-e69a3ec614b3-82e7/" target="_blank">Link naar mijn visual design</a>
         </p>
     
         <h1>Introductie</h1>
