--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -8,10 +8,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 </head>
 <body>
     <div id="contain1">
         <h1>Digital Styleguide</h1>
+        <h2>LOGO</h2>
+        <img class="logo" src="images/logo.png">
+        <p>KLEUR: #333333</p>
+        <h2>FONTS</h2>
+        <h4>BIOGRAPHY</h4>
+        <h4>Copyright Margot Roegiers</h4>
+        <p>Font: Source Sans Pro, regular. Grootte: 18pt. Kleur: #707070</p>
+        <h5>GROTE TITEL</h5>
+        <p>Font: Source Sans Pro, bold. Grootte: 70pt. Kleur: #333333 / #EEEEEE</p>
+        <h4>GEWONE TEKST</h4>
+        <p>Font: Source Sans Pro, regular. Grootte: 20pt. Kleur: #333333 / #EEEEEE</p>
+        <img class="datum" src="images/datum.jpg">
+        <p>Font: Source Sans Pro, bold. Grootte: 20pt. Kleur: #333333</p>
+        <h2>NAVIGATIE</h2>
+        <img class="datum" src="images/nav.jpg">
+        <h2>KLEUREN</h2>
+        <img class="datum" src="images/kleur.jpg">
+        <h2>BUTTON</h2>
+        <img class="datum" src="images/button.jpg">
+        <h2>FOTO'S</h2>
+        <img class="foto" src="images/drummer.jpg">
+        <p>Foto is een link naar een andere pagina.</p>
     </div>
 </body>
 </html>
